--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,13 +3,13 @@ spring.application.name=restaurant-api
 server.port=${PORT:8080}
 
 # Database Configuration (will be overridden by environment variables)
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://mysql-2809e36d-restaurantedb-asuarezburgos804-6ded.g.aivencloud.com:21470/defaultdb?
+spring.datasource.username=avnadmin
+spring.datasource.password=${AIVEN_DB_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
