--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=restaurant-api
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://mysql-2809e36d-restaurantedb-asuarezburgos804-6ded.g.aivencloud.com:21470/defaultdb?
+spring.datasource.username=avnadmin
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -44,4 +44,4 @@ spring.mvc.cors.allow-credentials=true
 spring.mvc.cors.max-age=3600
 
 # Allow Circular References (temporary fix)
-spring.main.allow-circular-references=true
+spring.main.allow-circular-references=true  
