--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=restaurant-api
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://mysql-2809e36d-restaurantedb-asuarezburgos804-6ded.g.aivencloud.com:21470/defaultdb?
+spring.datasource.url=jdbc:mysql://mysql-2809e36d-restaurantedb-asuarezburgos804-6ded.g.aivencloud.com:21470/defaultdb?useSSL=true&requireSSL=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&verifyServerCertificate=false
 spring.datasource.username=avnadmin
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
