--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -49,3 +49,10 @@ spring.main.allow-circular-references=true
 # Health Check para Render
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# Optimización para inicio rápido
+spring.main.lazy-initialization=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.open-in-view=false
+management.endpoint.health.probes.enabled=true
+management.health.db.enabled=false  # Desactiva chequeo de BD para health
